@@ -15,7 +15,6 @@ import org.springframework.web.multipart.MultipartFile;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.UUID;
 
 /**
@@ -49,7 +48,7 @@ public class VideoUploadService {
 
         try {
             // 确保存储目录存在
-            Path storageDir = Paths.get(storagePath);
+            Path storageDir = Path.of(storagePath);
             if (!Files.exists(storageDir)) {
                 Files.createDirectories(storageDir);
             }
